# audio_plugin_starter

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
